# ArcrisGUI

./: PKGBUILD  README.md  dev.sh  meson.build
.cache/clangd/index/: about.c.D2D01B7B7C14BC37.idx  about.h.36765808E67EF728.idx  carousel.c.F477AD4E3E2DD356.idx  carousel.h.D134A1A31D60C421.idx  close.c.C4553D2B7F597CA2.idx  close.h.D2B1E4BECC8590AF.idx  config.c.24044701B525B091.idx  config.h.81B93E0BD12102ED.idx  disk_manager.c.A4FF323548D5A0F5.idx  disk_manager.h.7F661360E52BCE64.idx  internet.c.BD3860C419E6BD59.idx  internet.h.A68B92FE848D6D6D.idx  main.c.005886F746C2F02C.idx  page1.c.2FE424F102EF9EAB.idx  page1.h.D9933E049ED33855.idx  page2.c.1D7F72DC7D9D53DC.idx  page2.h.1C3CDE39E27B7D59.idx  page3.c.C04EFA9FC9FF4756.idx  page3.h.1E20EFA88741AAA3.idx  page4.c.2AB07D4921D08568.idx  page4.h.42EDB979729EDE4B.idx  page5.c.0EBC47F3940A516C.idx  page5.h.5551BC2F865EF4C0.idx  page6.c.D2F3F8FE8C94D24F.idx  page6.h.CBD84E99F625D7C9.idx  page7.c.FC1F648F4568E439.idx  page7.h.1B964ECF0C893D51.idx  page8.c.AC97F0C081289B6C.idx  page8.h.6D7AAC735A78A71D.idx  page9.c.72E08AA2CAD9F0D8.idx  page9.h.1EE65BCF4058848A.idx  partition_manager.c.49E684CD56E9A755.idx  partition_manager.h.AE3105969CB029BB.idx  partitionmanual.c.8AB7EF9BD666EBA5.idx  partitionmanual.h.7E790E16955435E0.idx  startbutton.c.814B2D1969515986.idx  types.h.4E71CDA8571BB69E.idx  window.c.631A8438D6861434.idx  window.h.DF9FE9C16907B870.idx  window_apps.c.66FBC5D73C61FF24.idx  (+9 more)
data/: PKGBUILD  PKGBUILD_test  a  about.ui  copia.sh  demo.ui  gresource.xml  install.btrfs  install.copia  install.sh  install_copia.sh  install_simple.sh  installcopia.sh  meson.build  org.gtk.arcris.desktop  page1.ui  page10.ui  page2.ui  page3.ui  page4 copy.ui  page4.ui  page5.ui  page6.ui  page6_proximo.ui  page7.ui  page8.ui  page9.ui  partitionmanual.ui  variables-examples.sh  variables.sh  variables.sh.backup  window.ui  window_apps.ui  window_disk.ui  window_hardware.ui  window_kernel.ui  window_memoryram.ui  window_partition.ui  window_program_extra.ui  window_repos.ui  (+1 more)
data/bash/: clear-arch  config_conectividad.sh  config_disk.sh  config_fstab.sh  config_grub.sh  config_kitty.sh  config_ly.sh  config_teclado.sh  config_zram.sh  driver_audio.sh  driver_bluetooth.sh  driver_video.sh  driver_wifi.sh  entorno_grafico.sh  install.sh  program_essential.sh  program_extra.sh  variables.sh
data/bash/bash/: variables.sh
data/bash/btrfs/: btrfs-guide  btrfs-help  btrfs-maintenance  btrfs-maintenance.service  btrfs-maintenance.timer  config  home  root
data/bash/i3/: atajos.txt
data/bash/rofi/: config.rasi
data/bash/xmonad/: xinitrc  xmobarrc  xmonad.hs
data/config/: pacman-chroot.conf  pacman.conf  zshrc
data/img/: convertir_a_1920.txt  logo.xcf
docs/: password-validation.md
extra/: hardware_video.c
src/: Makefile.simple  Makefile.test  about.c  about.h  carousel.c  carousel.h  close.c  close.h  config.c  config.h  disk_manager.c  disk_manager.h  i18n.c  i18n.h  internet.c  internet.h  main.c  meson.build  page1.c  page1.h  page10.c  page10.h  page2.c  page2.h  page3.c  page3.c.backup_final  page3.h  page4.c  page4.h  page5.c  page5.h  page6.c  page6.h  page7.c  page7.h  page8.c  page8.h  page9.c  page9.h  partition_manager.c  (+27 more)
